[tool.poetry]
name = "cirq-custom-gate"
version = "0.1.0"
description = ""
authors = ["sdual <shr.nrht.0623@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
cirq = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
